[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/Collision.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/OneHitMob.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/stone-hit.wav" type="AudioStream" id=3]
[ext_resource path="res://objects/Weapon.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/coin-pickup.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 15.8114

[node name="OneHitMob" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Collision" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2( 2, 1 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0

[node name="MoneySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -25.0

[node name="Weapon" parent="." instance=ExtResource( 4 )]

[connection signal="body_entered" from="Collision" to="." method="_on_Collision_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
